error_log
./P4/MiniIRParser.java:192: error: incompatible types: Exp cannot be converted to Temp
{if ("" != null) return new CJumpStmt(n0,n2,n3);}
                                         ^
./P4/MiniIRParser.java:216: error: incompatible types: Exp cannot be converted to Temp
{if ("" != null) return new HStoreStmt(n0,n2,n3,n4);}
                                          ^
./P4/MiniIRParser.java:230: error: incompatible types: Exp cannot be converted to Temp
{if ("" != null) return new HLoadStmt(n0,n2,n3,n4);}
                                            ^
./P4/MiniIRParser.java:252: error: incompatible types: Exp cannot be converted to SimpleExp
{if ("" != null) return new PrintStmt(n0,n2);}
                                         ^
./P4/MiniIRParser.java:330: error: incompatible types: Exp cannot be converted to SimpleExp
{if ("" != null) return new StmtExp(n0,n2,n3,n5,n6);}
                                             ^
./P4/MiniIRParser.java:376: error: incompatible types: Exp cannot be converted to SimpleExp
{if ("" != null) return new Call(n0,n2,n3,n5,n7);}
                                    ^
./P4/MiniIRParser.java:386: error: incompatible types: Exp cannot be converted to SimpleExp
{if ("" != null) return new HAllocate(n0,n2);}
                                         ^
./P4/MiniIRParser.java:396: error: incompatible types: Exp cannot be converted to Temp
{if ("" != null) return new BinOp(n0,n1,n2);}
                                     ^
./P4/visitor/GJDepthFirst.java:13: error: GJDepthFirst is not abstract and does not override abstract method visit(SimpleExp,A) in GJVisitor
public class GJDepthFirst<R,A> implements GJVisitor<R,A> {
       ^
  where A,R are type-variables:
    A extends Object declared in class GJDepthFirst
    R extends Object declared in class GJDepthFirst
Note: ./P4/visitor/GJDepthFirst.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
9 errors
